plugins {
    id 'groovy'
    id 'java'
    id 'application'
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

application {
    mainClass = 'cluster.JeneticsMain'
    applicationDefaultJvmArgs = ['--add-modules', 'jdk.incubator.vector']
}

task runESQ(type: JavaExec) {
    group = "Execution"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'cluster.JeneticsMain'
    jvmArgs += ['--add-modules', 'jdk.incubator.vector']
}

dependencies {

    implementation group: 'org.apache.groovy', name: 'groovy', version: '5.0.4'
    implementation group: 'org.apache.groovy', name: 'groovy-json', version: '5.0.4'

    implementation group: 'io.jenetics', name: 'jenetics', version: '7.2.0'
    implementation 'io.jenetics:jenetics.ext:7.2.0'

    implementation group: 'org.apache.lucene', name: 'lucene-core', version: '10.4.0'
    implementation group: 'org.apache.lucene', name: 'lucene-analysis-common', version: '10.4.0'
    implementation group: 'org.apache.lucene', name: 'lucene-classification', version: '10.4.0'
    implementation group: 'org.apache.lucene', name: 'lucene-queryparser', version: '10.4.0'


    testRuntimeOnly("org.junit.platform:junit-platform-launcher")


    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-groovy-5.0'
}

test {
    useJUnitPlatform()
}